# cmake-git-version-tracking

./: CMakeLists.txt  README.md  git.cc.in
